# zrx

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: build.yml
crates/zrx/: Cargo.toml
crates/zrx-id/: Cargo.toml
crates/zrx-id/src/: id.rs  lib.rs
crates/zrx-id/src/id/: error.rs  format.rs  matcher.rs  path.rs
crates/zrx-id/src/id/format/: container.rs  encoding.rs  error.rs  span.rs
crates/zrx-id/src/id/matcher/: builder.rs  error.rs  selector.rs
crates/zrx-id/src/id/path/: error.rs
crates/zrx/src/: lib.rs
