# Copyright (c) 2024 Zensical <contributors@zensical.org>

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.81"
homepage = "https://github.com/zensical/zrx"
documentation = "https://github.com/zensical/zrx"
repository = "https://github.com/zensical/zrx"
authors = ["Zensical <contributors@zensical.org>"]
license = "MIT"

[workspace.lints.clippy]
match_same_arms = "allow"
module_name_repetitions = "allow"

[workspace.lints.clippy.all]
level = "warn"
priority = -1

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.dependencies]
zrx = { version = "0.0.2", path = "crates/zrx" }
zrx-id = { version = "0.0.2", path = "crates/zrx-id" }

# Runtime
globset = "0.4.16"
percent-encoding = "2.3.1"
thiserror = "2.0.12"
tinyvec = "1.9.0"
